[package]
edition      = "2024"
name         = "led_esp"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "led_esp"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32c3", "unstable"] }

esp-rtos = { version = "0.2.0", features = ["embassy", "esp32c3"] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c3"] }

embassy-executor = { version = "0.9.1", features = ["executor-thread"] }
embassy-time     = "0.5.0"

critical-section = "1.2.0"
static_cell      = "2.1.1"
esp-println = { version = "0.13", features = ["esp32c3", "log"] }
log = "0.4"
esp-hal-smartled = { version = "0.17.0", features = ["esp32c3"] }
smart-leds-trait = "0.3.2"
fugit = "0.3.9"
mipidsi = "0.10.0"
embedded-hal-bus = "0.3.0"
embedded-graphics = "0.8.2"
profont = "0.7.0"
embedded_font = "0.1.3"
u8g2-fonts = { version = "0.7.2", features = ["embedded_graphics_textstyle"] }
embassy-sync = "0.8.0"
heapless = "0.9.2"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
